--- a/index.html
+++ b/index.html
@@ -1,159 +1,220 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <!-- ------- REQUIRED META ------- -->
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ricardo Zaal — Faith, Purpose & Legacy</title>
-  <meta name="description" content="I help Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold action.">
+  <title>Ricardo Zaal — Faith, Purpose & Vision</title>
+  <meta name="description" content="Ricardo Zaal helps people discover calling, rebuild income through business, and restore dignity with bold action. Learn more, connect, or start with Impact Seed." />
+  <link rel="canonical" href="https://ricardozaal.com/"/>
+
+  <!-- ------- OPEN GRAPH / TWITTER ------- -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ricardozaal.com/" />
+  <meta property="og:title" content="Ricardo Zaal — Faith, Purpose & Vision" />
+  <meta property="og:description" content="Helping people discover calling, rebuild income through business, and restore dignity with bold action." />
+  <!-- If you add a share image later, set this: -->
+  <!-- <meta property="og:image" content="https://ricardozaal.com/og-image.jpg" /> -->
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ricardo Zaal — Faith, Purpose & Vision" />
+  <meta name="twitter:description" content="Helping people discover calling, rebuild income through business, and restore dignity with bold action." />
+  <!-- <meta name="twitter:image" content="https://ricardozaal.com/og-image.jpg" /> -->
+
+  <!-- ------- JSON-LD (ORGANIZATION / PERSON) ------- -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ricardo Zaal",
+    "url": "https://ricardozaal.com/",
+    "email": "info@ricardozaal.com",
+    "sameAs": [
+      "https://www.facebook.com/ricardozaal",
+      "https://www.tiktok.com/@ricardodzaal",
+      "https://www.instagram.com/ricardo.zaal",
+      "https://fountaingrace.org/",
+      "https://seed.impactseed.co.za/"
+    ],
+    "description": "A voice of faith, purpose, and vision — helping people discover calling, rebuild income through business, and restore dignity with bold action."
+  }
+  </script>
+
+  <!-- ------- FONTS & BASIC RESET ------- -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- ------- STYLES ------- -->
   <style>
     :root{
-      --bg1:#0f2027; --bg2:#203a43; --bg3:#2c5364; /* dark turquoise blend */
-      --teal:#08c4c9; --teal-dark:#069ca0;
-      --ink:#eaf6f7; --ink-dim:#b7c7d1;
-      --shadow:0 10px 30px rgba(0,0,0,.35);
-      --radius:14px;
-      --maxw:1120px;
+      --bg-1:#0c1f27;     /* deep teal */
+      --bg-2:#072c35;     /* darker cyan/teal */
+      --accent:#20d3c2;   /* turquoise accent */
+      --accent-2:#12a7a0; /* button hover */
+      --panel:#123543;    /* card bg */
+      --text:#eaf7f6;     /* near-white */
+      --muted:#b7d7d4;
+      --shadow: 0 20px 60px rgba(0,0,0,.35);
+      --radius:22px;
     }
     *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
+    html,body{margin:0;height:100%;scroll-behavior:smooth}
     body{
-      margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      color:var(--ink);
-      background: linear-gradient(135deg,var(--bg1),var(--bg2),var(--bg3));
-      min-height:100dvh;
-      text-align:center;
+      font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background: radial-gradient(1400px 800px at 50% -200px, #214f64 0%, var(--bg-2) 40%, var(--bg-1) 100%) fixed;
+      background-color:var(--bg-1);
     }
-    a{color:inherit; text-decoration:none}
-    header{padding:clamp(60px,10vh,120px) 20px 40px}
-    h1{font-size:clamp(38px,6vw,56px); margin:0 0 14px}
-    .tag{font-size:clamp(16px,2.2vw,20px); opacity:.95; max-width:780px; margin:0 auto 28px}
-    .cta{display:flex; gap:14px; justify-content:center; flex-wrap:wrap; margin-top:8px}
+    a{color:inherit;text-decoration:none}
+    .wrap{max-width:1100px;margin:0 auto;padding:48px 22px 72px}
+    header{padding:84px 0 32px;text-align:center}
+    h1{
+      font-size:60px;line-height:1.05;margin:0 0 18px;
+      font-weight:800;letter-spacing:.2px;
+      text-shadow:0 4px 24px rgba(0,0,0,.4);
+    }
+    .lead{
+      max-width:900px;margin:0 auto 28px;font-size:20px;line-height:1.6;color:var(--muted)
+    }
+    .cta-row{display:flex;gap:16px;justify-content:center;flex-wrap:wrap;margin-top:10px}
     .btn{
-      display:inline-block; padding:14px 22px; border-radius:12px; font-weight:700; letter-spacing:.2px;
-      border:1px solid transparent; box-shadow:var(--shadow); transition:.25s ease; cursor:pointer
+      padding:14px 22px;border-radius:14px;border:1px solid rgba(255,255,255,.08);
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+      color:var(--text);font-weight:700;box-shadow:var(--shadow);transition:.2s transform, .25s background;
+      backdrop-filter: blur(6px);
     }
-    .btn-primary{ background:linear-gradient(180deg,var(--teal),var(--teal-dark)); color:#03272a }
-    .btn-primary:hover{ transform:translateY(-2px); filter:saturate(110%) brightness(1.05)}
-    .btn-ghost{ background:transparent; color:var(--ink); border-color:rgba(255,255,255,.25)}
-    .btn-ghost:hover{ border-color:var(--teal); color:var(--teal)}
-
-    main section{padding:70px 20px}
-    .container{max-width:var(--maxw); margin:0 auto}
+    .btn:hover{transform:translateY(-2px)}
+    .btn-primary{
+      background:linear-gradient(180deg, var(--accent) 0%, #0bd1bf 100%);
+      color:#0b1e23;border:none;
+    }
+    .btn-primary:hover{background:linear-gradient(180deg, var(--accent-2), var(--accent))}
+    .section{
+      margin-top:46px;padding:26px 26px;border-radius:var(--radius);
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+      border:1px solid rgba(255,255,255,.08);box-shadow:var(--shadow)
+    }
+    .section h2{
+      margin:6px 0 16px;font-size:34px;letter-spacing:.3px
+    }
+    .section p{margin:0 0 12px;color:var(--text);opacity:.96}
+    .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
     .card{
-      background:rgba(255,255,255,.05);
-      border:1px solid rgba(255,255,255,.1);
-      border-radius:var(--radius);
-      padding:28px; box-shadow:var(--shadow);
-      margin:0 auto; max-width:900px;
-      text-align:left
+      background:var(--panel);border:1px solid rgba(255,255,255,.08);border-radius:18px;padding:20px;
+      box-shadow: var(--shadow);
     }
-    h2{font-size:clamp(26px,4vw,34px); margin:0 0 10px; color:var(--teal)}
-    p.lead{font-size:18px; line-height:1.6; color:var(--ink-dim)}
+    .card h3{margin:0 0 8px}
+    .footer{
+      margin-top:46px;text-align:center;color:var(--muted);font-size:14px;opacity:.9
+    }
 
-    /* floating socials */
-    .social-fab{
-      position:fixed; right:18px; bottom:18px; z-index:20;
-      display:flex; flex-direction:column; gap:10px;
+    /* Floating socials */
+    .float-socials{
+      position:fixed;right:16px;top:120px;display:flex;flex-direction:column;gap:12px;z-index:9
     }
-    .fab{
-      width:48px; height:48px; border-radius:14px; display:grid; place-items:center;
-      background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.15);
-      box-shadow:var(--shadow); transition:.2s ease;
+    .soc{
+      width:46px;height:46px;border-radius:12px;display:grid;place-items:center;
+      background:linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.04));
+      border:1px solid rgba(255,255,255,.12);box-shadow:var(--shadow);
+      transition:transform .15s ease, background .25s ease; backdrop-filter: blur(6px);
     }
-    .fab:hover{ transform:translateY(-2px); background:rgba(255,255,255,.12); border-color:rgba(8,196,201,.55)}
-    .fab svg{display:block}
+    .soc:hover{transform:translateY(-2px); background:linear-gradient(180deg, rgba(255,255,255,.18), rgba(255,255,255,.08))}
+    .soc svg{width:22px;height:22px;fill:var(--accent)}
 
-    footer{color:var(--ink-dim); padding:40px 0 60px; font-size:14px}
+    @media (max-width:900px){
+      h1{font-size:44px}
+      .lead{font-size:18px}
+      .cards{grid-template-columns:1fr}
+      .float-socials{top:auto;bottom:18px;right:18px;flex-direction:row}
+    }
   </style>
 </head>
 <body>
 
-  <!-- HERO -->
-  <header>
-    <h1>Ricardo Zaal</h1>
-    <p class="tag">
-      A voice of faith, purpose, and vision — helping people discover calling, rebuild income through business,
-      and restore dignity with bold action.
-    </p>
-    <div class="cta">
-      <a class="btn btn-primary" href="#about">Learn More</a>
-      <a class="btn btn-ghost" href="#contact">Contact</a>
-      <a class="btn btn-primary" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">
-        Start with Impact Seed
-      </a>
-    </div>
-  </header>
+  <!-- Floating Socials -->
+  <nav class="float-socials" aria-label="Social links">
+    <a class="soc" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener" aria-label="Facebook">
+      <svg viewBox="0 0 24 24"><path d="M22 12.06C22 6.49 17.53 2 12 2S2 6.49 2 12.06c0 5.02 3.66 9.19 8.44 9.94v-7.03H7.9v-2.91h2.54V9.41c0-2.5 1.5-3.88 3.78-3.88 1.09 0 2.24.2 2.24.2v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.91h-2.34v7.03C18.34 21.25 22 17.08 22 12.06z"/></svg>
+    </a>
+    <a class="soc" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener" aria-label="TikTok">
+      <svg viewBox="0 0 24 24"><path d="M21 8.5a6.5 6.5 0 0 1-4.6-1.9v6.71a5.31 5.31 0 1 1-5.31-5.31c.4 0 .78.05 1.15.15v2.58a2.71 2.71 0 1 0 1.71 2.54V2h2.38a4.11 4.11 0 0 0 4.07 3.51z"/></svg>
+    </a>
+    <a class="soc" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener" aria-label="Instagram">
+      <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm6.5 1.3a1.2 1.2 0 1 0 0-2.4 1.2 1.2 0 0 0 0 2.4z"/></svg>
+    </a>
+    <a class="soc" href="mailto:info@ricardozaal.com" aria-label="Email">
+      <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v1.2l10 6.25L22 7.2V6a2 2 0 0 0-2-2zm2 5.4-9.35 5.84a1.5 1.5 0 0 1-1.3 0L2 9.4V18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9.4z"/></svg>
+    </a>
+    <a class="soc" href="https://wa.me/27618560854" target="_blank" rel="noopener" aria-label="WhatsApp">
+      <svg viewBox="0 0 24 24"><path d="M20 3.9A10 10 0 0 0 3.3 17.9L2 22l4.2-1.1A10 10 0 0 0 12 22 10 10 0 0 0 20 3.9zm-7.9 15.7c-1.7 0-3.3-.5-4.7-1.4l-.3-.2-2.8.7.8-2.7-.2-.3A7.9 7.9 0 1 1 12.1 19.6zm4.7-5.9c-.3-.2-1.7-.8-1.9-.9s-.4-.1-.6.1-.7.9-.9 1.1-.3.2-.6.1a6.5 6.5 0 0 1-1.9-1.2 7.1 7.1 0 0 1-1.3-1.6c-.1-.2 0-.4.1-.6l.4-.5.3-.5c.1-.2 0-.4 0-.5s-.6-1.4-.8-1.9c-.2-.4-.4-.4-.6-.4h-.5c-.2 0-.5.1-.7.3-.3.3-1 1-1 2.4 0 1.4 1 2.7 1.1 2.9s2.1 3.3 5 4.5c.7.3 1.3.5 1.8.6.7.2 1.3.2 1.8.1.6-.1 1.7-.7 1.9-1.4s.2-1.2.2-1.4-.2-.3-.5-.4z"/></svg>
+    </a>
+  </nav>
 
-  <!-- ABOUT -->
-  <main>
-    <section id="about">
-      <div class="container">
+  <main class="wrap">
+    <header>
+      <h1>Ricardo Zaal</h1>
+      <p class="lead">
+        A voice of faith, purpose, and vision — helping people discover calling, rebuild
+        income through business, and restore dignity with bold action.
+      </p>
+      <div class="cta-row">
+        <a href="#about" class="btn">Learn More</a>
+        <a href="#contact" class="btn">Contact</a>
+        <a href="https://seed.impactseed.co.za/" class="btn btn-primary" target="_blank" rel="noopener">Start with Impact Seed</a>
+      </div>
+    </header>
+
+    <section id="about" class="section" aria-labelledby="about-h">
+      <h2 id="about-h">About Ricardo</h2>
+      <p>
+        I help <strong>Kingdom-minded people</strong> rebuild their lives and income through business and calling —
+        not begging for blessings, but building with wisdom, courage, and dignity. If you’re ready to align faith
+        with practical action and legacy, you’re in the right place.
+      </p>
+      <p style="margin-top:14px;color:var(--muted)">
+        Prefer church resources? Visit <a href="https://fountaingrace.org/" target="_blank" rel="noopener" style="color:var(--accent)">fountaingrace.org</a>.
+      </p>
+    </section>
+
+    <section id="links" class="section" aria-labelledby="links-h" style="margin-top:26px">
+      <h2 id="links-h">Quick Links</h2>
+      <div class="cards">
+        <a class="card" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener"><h3>Facebook</h3><p>@ricardozaal</p></a>
+        <a class="card" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener"><h3>TikTok</h3><p>@ricardodzaal</p></a>
+        <a class="card" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener"><h3>Instagram</h3><p>@ricardo.zaal</p></a>
+        <a class="card" href="https://seed.impactseed.co.za/" target="_blank" rel="noopener"><h3>Impact Seed</h3><p>seed.impactseed.co.za</p></a>
+        <a class="card" href="https://fountaingrace.org/" target="_blank" rel="noopener"><h3>Fountain of Grace</h3><p>fountaingrace.org</p></a>
+        <a class="card" href="#contact"><h3>Contact</h3><p>Email · WhatsApp · Telegram</p></a>
+      </div>
+    </section>
+
+    <section id="contact" class="section" aria-labelledby="contact-h" style="margin-top:26px">
+      <h2 id="contact-h">Let’s Connect</h2>
+      <div class="cards">
         <div class="card">
-          <h2>About Ricardo</h2>
-          <p class="lead">
-            I help <strong>Kingdom-minded people</strong> rebuild their lives and income through business and calling —
-            not begging for blessings, but building with wisdom, courage, and dignity. If you’re ready to align faith with
-            practical action and legacy, you’re in the right place.
+          <h3>Email</h3>
+          <p><a href="mailto:info@ricardozaal.com" style="color:var(--accent)">info@ricardozaal.com</a></p>
+        </div>
+        <div class="card">
+          <h3>WhatsApp</h3>
+          <p><a href="https://wa.me/27618560854" target="_blank" rel="noopener" style="color:var(--accent)">+27 61 856 0854</a></p>
+        </div>
+        <div class="card">
+          <h3>Telegram</h3>
+          <!-- If you later have a specific t.me username, replace the link below -->
+          <p><a href="tg://resolve?phone=27618560854" style="color:var(--accent)">Open in Telegram</a></p>
+          <p style="color:var(--muted);font-size:14px;margin-top:6px">
+            If Telegram link doesn’t open, add <strong>+27 61 856 0854</strong> in Telegram and message.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="container">
-        <div class="card">
-          <h2>Let’s Connect</h2>
-          <p class="lead">Choose what’s easiest for you:</p>
-
-          <div style="display:grid; gap:18px; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); margin-top:18px; text-align:left">
-            <div>
-              <strong>Email</strong><br>
-              <a href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo">info@ricardozaal.com</a>
-            </div>
-            <div>
-              <strong>WhatsApp</strong><br>
-              <a href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect." target="_blank" rel="noopener">
-                +27 61 856 0854
-              </a>
-            </div>
-            <div>
-              <strong>Telegram</strong><br>
-              <!-- This works on devices with Telegram installed -->
-              <a href="tg://resolve?phone=27618560854">Open in Telegram</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <p class="footer">© <span id="y"></span> Ricardo Zaal. All rights reserved.</p>
   </main>
 
-  <!-- FLOATING SOCIAL ICONS (fixed bottom-right) -->
-  <div class="social-fab" aria-label="Social links">
-    <!-- Facebook -->
-    <a class="fab" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener" aria-label="Facebook">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M15 8h2V4h-2c-2.2 0-4 1.8-4 4v2H9v4h2v6h4v-6h2l1-4h-3V8c0-.6.4-1 1-1Z" fill="#08c4c9"/></svg>
-    </a>
-    <!-- TikTok -->
-    <a class="fab" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener" aria-label="TikTok">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M14 3h3c.2 1.8 1.5 3.2 3 3.6V10c-1.9-.1-3.6-.7-5-1.7v6.4a5.7 5.7 0 1 1-3.6-5.3V12a3.2 3.2 0 1 0 2 3V3Z" fill="#08c4c9"/></svg>
-    </a>
-    <!-- Instagram -->
-    <a class="fab" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener" aria-label="Instagram">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><rect x="4" y="4" width="16" height="16" rx="5" stroke="#08c4c9" stroke-width="1.6"/><circle cx="12" cy="12" r="4" stroke="#08c4c9" stroke-width="1.6"/><circle cx="17.5" cy="6.5" r="1.25" fill="#08c4c9"/></svg>
-    </a>
-    <!-- Email -->
-    <a class="fab" href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo" aria-label="Email">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><rect x="3.5" y="5.5" width="17" height="13" rx="2" stroke="#08c4c9" stroke-width="1.6"/><path d="M4 7l8 6 8-6" stroke="#08c4c9" stroke-width="1.6"/></svg>
-    </a>
-    <!-- WhatsApp -->
-    <a class="fab" href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect." target="_blank" rel="noopener" aria-label="WhatsApp">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="9" stroke="#08c4c9" stroke-width="1.6"/><path d="M8.5 9.5c.3 2.9 2.6 5.2 5.5 5.5l1.5-1.5-2.3-1 .9-1.8-1.8-.9-1 2.3-1.8-.9-1.5 1.3Z" fill="#08c4c9"/></svg>
-    </a>
-  </div>
-
-  <footer>© <span id="y"></span> Ricardo Zaal. All rights reserved.</footer>
-
-  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+  <script>
+    // Current year in footer
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
