--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
       .float-socials{top:auto;bottom:18px;right:18px;flex-direction:row}
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L334TBN090"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L334TBN090');
+</script>
 </head>
 <body>
 
